# rust-202

./: .clippy.toml  .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
benches/: functional_bench.rs
doc/: ARCHITECTURE.md  ASYNC_MODULE_SUMMARY.md  BEGINNER_GUIDE.md  CHANGELOG.md  CONTRIBUTING.md  DSL_GUIDE.md  PROJECT_OVERVIEW.md  PROJECT_SUMMARY.md  README.md
examples/: async_demo.rs  quickstart.rs
rust-202-lib/: Cargo.toml
rust-202-lib/benches/: oop_bench.rs
rust-202-lib/examples/: patterns.rs
rust-202-lib/src/: lib.rs
rust-202-lib/src/async/: mod.rs
rust-202-lib/src/async/basics/: async_fn.rs  mod.rs
rust-202-lib/src/async/concurrency/: join_handle.rs  mod.rs  select_macro.rs  timeout_cancel.rs
rust-202-lib/src/async/patterns/: async_state_machine.rs
rust-202-lib/src/async/pinning/: mod.rs  pin_basics.rs
rust-202-lib/src/async/streams/: stream_basics.rs  stream_combinators.rs
rust-202-lib/src/dsl/: mod.rs
rust-202-lib/src/dsl/py/: config.py  transform.py
rust-202-lib/src/dsl/python/: call.rs  embed.rs  mod.rs  sandbox.rs
rust-202-lib/src/functional/: iterators.rs
rust-202-lib/src/idioms/: error_handling.rs  mod.rs  ownership.rs
rust-202-lib/src/oop/: composition.rs  mod.rs
rust-202-lib/src/oop/patterns/: adapter.rs  builder.rs  mod.rs  observer.rs  singleton.rs  strategy.rs
rust-202-lib/src/rust_191/: raw_lifetimes.rs
rust-202-web/: .gitignore  Cargo.toml  Dockerfile  QUICK_START.md  README.md  build.rs
rust-202-web/proto/: patterns.proto
rust-202-web/src/: lib.rs  main.rs
rust-202-web/src/grpc/: mod.rs  service.rs
rust-202-web/src/rest/: handlers.rs  mod.rs  models.rs  openapi.rs  openapi_dsl.rs
rust-202-web/tests/: integration.rs
src/: lib.rs
src/async/: mod.rs
src/async/basics/: async_fn.rs  future_return.rs  mod.rs
src/async/concurrency/: join_handle.rs  mod.rs  select_macro.rs  timeout_cancel.rs
src/async/io/: mod.rs  tcp_server.rs
src/async/patterns/: async_pipeline.rs  async_state_machine.rs  mod.rs
src/async/pinning/: mod.rs  pin_basics.rs
src/async/streams/: mod.rs  stream_basics.rs  stream_combinators.rs
src/async/traits/: async_fn_in_trait.rs  async_trait_macro.rs  mod.rs
src/differentiators/: concurrency.rs  mod.rs  performance.rs  safety.rs
src/functional/: closures.rs  mod.rs
src/idioms/: error_handling.rs  ownership.rs
src/oop/patterns/: factory.rs
src/rust_191/: const_atomics.rs  lld_default.rs  mod.rs  raw_lifetimes.rs
