[package]
name = "rust-202"
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"
authors = ["Krystian Marek"]
license = "MIT OR Apache-2.0"
description = "An interactive, example-driven cheat sheet for advanced Rust concepts"
repository = "https://github.com/KrystianMarek/rust-202"
keywords = ["rust", "examples", "patterns", "tutorial", "learning"]
categories = ["development-tools", "rust-patterns"]
readme = "README.md"

[lib]
name = "rust_202"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
once_cell = "1.19"
parking_lot = "0.12"

# Async runtime dependencies (feature-gated)
tokio = { version = "1.40", features = ["full"], optional = true }
async-std = { version = "1.12", optional = true }
futures = "0.3"
tokio-stream = { version = "0.1", optional = true }
async-trait = "0.1"
pin-project = "1.1"
pin-project-lite = "0.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
anyhow = "1.0"
proptest = "1.4"
tokio-test = "0.4"

[features]
default = ["async-tokio"]
async-tokio = ["tokio", "tokio-stream"]
async-std-runtime = ["async-std"]
all-async = ["async-tokio", "async-std-runtime"]

[[bench]]
name = "oop_bench"
harness = false

[[bench]]
name = "functional_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
inherits = "release"

