[workspace]
members = ["rust-202-lib", "rust-202-web"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Krystian Marek"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/KrystianMarek/rust-202"

[workspace.dependencies]
# Shared async dependencies
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
pin-project = "1.1"
pin-project-lite = "0.2"

# Shared utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
once_cell = "1.19"
parking_lot = "0.12"

# Testing
criterion = "0.5"
proptest = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
inherits = "release"
